adminController fixes; deleted comments

--- a/Crafty/Crafty/Views/Admins/Index.cshtml
+++ b/Crafty/Crafty/Views/Admins/Index.cshtml
@@ -9,7 +9,7 @@
 <div>
     <br />
     @{
-        <h4>Total accounts: @Model.numberOfTotalAccounts</h4>
+        <h4>Total site accounts: @Model.numberOfTotalAccounts</h4>
         <h4>Total subscribers: @Model.numberOfPayingAccounts</h4>
         <h4>Total beer monthly subscribers: @Model.numberOfBeerAccounts</h4>
         <h4>Total hard monthly liquor subscribers: @Model.numberOfHardLiquorAccounts</h4>
