--- a/Crafty/Crafty/Views/Manage/Purchase.cshtml
+++ b/Crafty/Crafty/Views/Manage/Purchase.cshtml
@@ -2,15 +2,10 @@
 @{
     ViewBag.Title = "Purchase Page";
 }
-
 <h2>@ViewBag.Title</h2>
-
 <p class="text-success">@ViewBag.StatusMessage</p>
-
-@using (Html.BeginForm("ThankYou", "Survey"))
-{
-    @Html.AntiForgeryToken()
-
+@*@using (Html.BeginForm("ThankYou", "Survey"))*@
+@Html.AntiForgeryToken()
 
 <table class="table">
     <tr>
@@ -37,21 +32,30 @@
             }
         </td>
         <td>
-            <input type="submit" value="Purchase" class="btn btn-default" />
+            <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                <input type="hidden" name="cmd" value="_xclick">
+                <input type="hidden" name="business" value="P8BQ4XAK7PE8J">
+                <input type="hidden" name="lc" value="US">
+                <input type="hidden" name="item_name" value="Booze Box">
+                <input type="hidden" name="amount" value=@Html.DisplayFor(modelItem => modelItem.boxPrice)>
+                <input type="hidden" name="currency_code" value="USD">
+                <input type="hidden" name="button_subtype" value="services">
+                <input type="hidden" name="tax_rate" value="5.600">
+                <input type="hidden" name="shipping" value="1.95">
+                <input type="hidden" name="return" value="http://localhost:54155/Home">
+                <input type="hidden" name="cbt" value="Return to BoozeBox.com" src="http://localhost:54155/Home">
+                <input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynowCC_LG.gif:NonHosted">
+                <input type="image" src="https://www.sandbox.paypal.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+            </form>
         </td>
 </table>
-
 <div>
-
     <h5>&nbsp&nbsp<a href="/Survey/Create">Retake survey</a></h5>
     <br />
-
 </div>
-
 <div class="form-group">
     <div class="col-md-offset-2 col-md-10">
         @*<input type="submit" value="Purchase" class="btn btn-default" />*@
     </div>
 </div>
-
-}
