Changed theme and home layout

--- a/Crafty/Crafty/Views/Home/Index.cshtml
+++ b/Crafty/Crafty/Views/Home/Index.cshtml
@@ -10,18 +10,17 @@
 <div class="row">
     <div class="col-md-6">
         <h2>Beer</h2>
-        <img src="~/Photo/beerbarley.jpg" height="230" width="385" />
-        <p>
-            Whether you're into triple IPA's or refreshing hard apple ciders, we have the  drink
-            for you!
-        </p>
-        <p>** gives you delicious and refreshing monthly liquor packages.</p>
-        <p><a class="btn btn-default" href="~/Account/Login">Learn more &raquo;</a></p>
-    </div>
+        <a href="~/Account/Login"><img src="~/Photo/beerbarley.jpg" height="360" width="570" /></a>
+            <p>
+                Whether you're into triple IPA's or refreshing hard ciders, we have the  drink
+                for you!
+            </p>
+            <p><a class="btn btn-success" href="~/Account/Login">Learn more &raquo;</a></p>
+</div>
     <div class="col-md-6">
         <h2>Liquor</h2>
-        <img src="~/Photo/whisky.jpg" height="230" width="355" />
+        <a href="~/Account/Login"><img src="~/Photo/whisky.jpg" height="360" width="560" /></a>
         <p>From a Macallan 30 year neat to somemthing to mix with soda, you can find it here!</p>
-        <p><a class="btn btn-default" href="~/Account/Login">Learn more &raquo;</a></p>
+        <p><a class="btn btn-success" href="~/Account/Login">Learn more &raquo;</a></p>
     </div>
 </div>
