--- a/Crafty/Crafty/Views/Account/Register.cshtml
+++ b/Crafty/Crafty/Views/Account/Register.cshtml
@@ -55,7 +55,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" /> <!-- This line is for the "Register" button-->
+            <input type="submit" class="btn btn-success" value="Register" /> <!-- This line is for the "Register" button-->
         </div>
     </div>
 
