--- a/Crafty/Crafty/Views/Manage/Index.cshtml
+++ b/Crafty/Crafty/Views/Manage/Index.cshtml
@@ -3,103 +3,118 @@
     ViewBag.Title = "Profile Page";
 }
 
-<h2>@ViewBag.Title</h2>
+@using (@Html.BeginForm("CancelSubscription", "Manage"))
+{
 
-<p class="text-success">@ViewBag.StatusMessage</p>
-<div>
-    @*To edit this page, also edit ManageViewModel and ManageController*@
-    @{
-        if (Model.product == null)
-        {
-            <br />
-            <h4><a href="/Survey/Create">Complete a survey</a> to begin receiving monthly liquor boxes.</h4>
+    <h2>@ViewBag.Title</h2>
+
+    <p class="text-success">@ViewBag.StatusMessage</p>
+    <div>
+        @*To edit this page, also edit ManageViewModel and ManageController*@
+        @{
+            if (Model.product == null)
+            {
+                <br />
+                <h4><a href="/Survey/Create">Complete a survey</a> to begin receiving monthly liquor boxes.</h4>
+            }
+            else {
+                <h3>Your current subscription: @Model.product</h3>
+                <h4>$@Model.boxPrice per month which includes:</h4><br>
+
+                foreach (string s in Model.contentNames)
+                {
+                    <dt>@s</dt>
+                }
+                <br /><br />
+                <h5><a href="/Survey/Create"> Retake our survey</a> to update your preferences.</h5>
+
+                <br />
+                <br />
+                if (Model.isSubscribed == true)
+                {
+                    <div>
+                        <input type="submit" class="btn btn-success" value="Cancel subscription" />
+                    </div>
+                }
+
+            }
         }
-        else {
-            <h3>Your current subscription: @Model.product</h3>
-            <h4>$@Model.boxPrice per month which includes:</h4><br>
 
-            foreach(string s in Model.contentNames)
-            {
-                <dt>@s</dt>
-            }
-            <br /><br />
-            <h5><a href = "/Survey/Create" > Retake our survey</a> to update your preferences.</h5>
-
-        }
-    } 
-    <br />
-    <h4>Change your account settings</h4>
-    <hr />  
-    <dl class="dl-horizontal">
-        <dt>Password:</dt>
-        <dd>
-            [
-            @if (Model.HasPassword)
-            {
-                @Html.ActionLink("Change your password", "ChangePassword")
-            }
-            else
-            {
-                @Html.ActionLink("Create", "SetPassword")
-            }
-            ]
-        </dd>
-        <dt>External Logins:</dt>
-        <dd>
-            @Model.Logins.Count [
-            @Html.ActionLink("Manage", "ManageLogins") ]
-        </dd>
-        @*
-            Phone Numbers can used as a second factor of verification in a two-factor authentication system.
-
-             See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication using SMS.
-
-             Uncomment the following block after you have set up two-factor authentication
-        *@
-        @*
-            <dt>Phone Number:</dt>
+        <br />
+        <br />
+        <h4>Change your account settings</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>Password:</dt>
             <dd>
-                @(Model.PhoneNumber ?? "None") [
-                @if (Model.PhoneNumber != null)
+                [
+                @if (Model.HasPassword)
                 {
-                    @Html.ActionLink("Change", "AddPhoneNumber")
-                    @: &nbsp;|&nbsp;
-                    @Html.ActionLink("Remove", "RemovePhoneNumber")
+                    @Html.ActionLink("Change your password", "ChangePassword")
                 }
                 else
                 {
-                    @Html.ActionLink("Add", "AddPhoneNumber")
+                    @Html.ActionLink("Create", "SetPassword")
                 }
-                ]
+
             </dd>
-        *@
-        <dt>Two-Factor Authentication:</dt>
-        <dd>
-            <p>
-                There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication.
-            </p>
-            @*@if (Model.TwoFactor)
-                {
-                    using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            <dt>External Logins:</dt>
+            <dd>
+                @Model.Logins.Count [
+                @Html.ActionLink("Manage", "ManageLogins") ]
+            </dd>
+            @*
+                Phone Numbers can used as a second factor of verification in a two-factor authentication system.
+
+                 See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
+                    for details on setting up this ASP.NET application to support two-factor authentication using SMS.
+
+                 Uncomment the following block after you have set up two-factor authentication
+            *@
+            @*
+                <dt>Phone Number:</dt>
+                <dd>
+                    @(Model.PhoneNumber ?? "None") [
+                    @if (Model.PhoneNumber != null)
                     {
-                        @Html.AntiForgeryToken()
-                        <text>Enabled
-                        <input type="submit" value="Disable" class="btn btn-link" />
-                        </text>
+                        @Html.ActionLink("Change", "AddPhoneNumber")
+                        @: &nbsp;|&nbsp;
+                        @Html.ActionLink("Remove", "RemovePhoneNumber")
                     }
-                }
-                else
-                {
-                    using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                    else
                     {
-                        @Html.AntiForgeryToken()
-                        <text>Disabled
-                        <input type="submit" value="Enable" class="btn btn-link" />
-                        </text>
+                        @Html.ActionLink("Add", "AddPhoneNumber")
                     }
-                }*@
-        </dd>
-    </dl>
-</div>
+                    ]
+                </dd>
+            *@
+            <dt>Two-Factor Authentication:</dt>
+            <dd>
+                <p>
+                    There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
+                    for details on setting up this ASP.NET application to support two-factor authentication.
+                </p>
+                @*@if (Model.TwoFactor)
+                    {
+                        using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                        {
+                            @Html.AntiForgeryToken()
+                            <text>Enabled
+                            <input type="submit" value="Disable" class="btn btn-link" />
+                            </text>
+                        }
+                    }
+                    else
+                    {
+                        using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                        {
+                            @Html.AntiForgeryToken()
+                            <text>Disabled
+                            <input type="submit" value="Enable" class="btn btn-link" />
+                            </text>
+                        }
+                    }*@
+            </dd>
+        </dl>
+    </div>
+            }
