--- a/Crafty/Crafty/Views/Survey/ThankYou.cshtml
+++ b/Crafty/Crafty/Views/Survey/ThankYou.cshtml
@@ -7,7 +7,7 @@
     <h2>Thank you for subscribing!</h2>
 
     <div>
-        <input type="submit" value="Return Home" class="btn btn-default" />
+        <input type="submit" value="Return Home" class="btn btn-success" />
     </div>
 
 
