updated product list

--- a/Crafty/Crafty/Views/Home/Products.cshtml
+++ b/Crafty/Crafty/Views/Home/Products.cshtml
@@ -9,9 +9,4 @@
 
 <strong>Here at BoozeBingeBox</strong>, we want your moments of inebriation to be as full of joy and morning hangovers as ours are. That's the reason why we get up and put on pants everyday - to customize many different packages of liquid awesomeness for your hours off the clock. Please take a survey so we can better gauge which combination best may suit you! Cheers!
 <br />
-<center><img src="~/Photo/beerbarley.jpg" height="360" width="570" /></center>
-<h4>Craft Beer</h4>
-<h4>Non-craft Beer</h4>
-<h4>Rum</h4>
-<h4>Vodka</h4>
-<h4>Tequila</h4>
+<center><img src="~/Photo/wordcloud 2.png" width="1100" height="540"/></center>
