Various View changes

--- a/Crafty/Crafty/Views/Manage/CancelSubscription.cshtml
+++ b/Crafty/Crafty/Views/Manage/CancelSubscription.cshtml
@@ -7,7 +7,7 @@
 @using (Html.BeginForm("Index", "Home"))
 {
 
-    <h3>We're sorry to see you go  :(</h3>
+    <h3>You've been unsubscribed. We're sorry to see you go   :(</h3>
 
     <br />
     <div>
