--- a/Crafty/Crafty/Views/Manage/Purchase.cshtml
+++ b/Crafty/Crafty/Views/Manage/Purchase.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Crafty.Models.IndexViewModel
 @{
-    ViewBag.Title = "Purchase Page";
+    ViewBag.Title = "Purchase Box";
 }
 <h2>@ViewBag.Title</h2>
 <p class="text-success">@ViewBag.StatusMessage</p>
