--- a/Crafty/Crafty/Views/Shared/_Layout.cshtml
+++ b/Crafty/Crafty/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Monthly Liquor Subscription Service - Please Drink Responsibly.</p>
+            <p>&copy; @DateTime.Now.Year - Booze Boxes - Please Drink Responsibly.</p>
         </footer>
     </div>
 
